# GTNH_Calculator

./: .gitignore  .gitignore.txt  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json
config/: config_air_filter.yaml  config_bastnasite.yaml  config_enriched_naquadah.yaml  config_hog.yaml  config_hog_base.yaml  config_monazite.yaml  config_naquadah.yaml  config_nitrobenzene.yaml  config_plat_line.yaml  config_super_glue.yaml
config/fixed_settings/: machine_options.yaml  machine_options_db.yaml  machine_types.yaml  machine_types_db.yaml
db/: machine_types.yaml
src/gtnh_calculator/: GTNH_Calculator.py  main.py  streamlit-app.py  streamlit_app.py
src/gtnh_calculator/.streamlit/: config.toml
src/gtnh_calculator/pages/: 1_Materials.py  2_Crafting_Chain_Calculator.py  2_Recipes.py  3_Crafting_Chain_Calculator.py  3_Crafting_Chain_Calculator_Old.py  4_Crafting_Chain_Calculator_Old.py
tests/: test_machine_behaviours.py
