[project]
name = "gtnh-calculator"
version = "1.0.0"
description = ""
authors = [
    {name = "Henrik Mueller",email = "henrik.mueller@nefkom.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "xgi (>=0.10,<0.11)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "networkx (>=3.5,<4.0)"
]

[tool.poetry]
packages = [{include = "gtnh_calculator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
