[project]
name = "gtnh-calculator"
version = "1.0.0"
description = ""
authors = [
    {name = "Henrik Mueller",email = "henrik.mueller@nefkom.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "xgi (>=0.10,<0.11)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "pycddlib (>=3.0.2,<4.0.0)",
    "ttkbootstrap (>=1.14.2,<2.0.0)",
    "netgraph (>=4.13.2,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "marshmallow (>=4.0.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gtnh_calculator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"